descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.


----------------------------------------------------------------------
--- 2024-XX-XX  Release X.XX.X                                     ---
----------------------------------------------------------------------

* improved k-g LS-DYNA keyword file geometry importer - Ali Haydar
* added bot support for plate mode thickness get/set cmds - Cliff Yapp
* fixed dbconcat treatment of a '/' prefix character - Cliff Yapp
* fixed bb '-o' in MGED - Chris McGregor
* removed obsolete -b and -t options from rtshot - Cliff Yapp
* removed obsolete rt_bot_minpieces variable from rt - Cliff Yapp
* removed obsolete rt_bot_tri_per_piece variable from rt - Cliff Yapp
* removed obsolete -B and -T options from nirt - Cliff Yapp
* removed obsolete bot_minpieces command from nirt - Cliff Yapp
* added manual page for pixcmp, bwish, btclsh - Sean Morrison
* fixed MGED solid editing "ted" command - Cliff Yapp
* added support for console text editing on Windows - Cliff Yapp
* fixed make_pnts GED command - Cliff Yapp
* fixed Archer Center View button - Cliff Yapp
* added bb '-m' option for outputting midpoint - Chris McGregor
* fixed primitive & matrix edit GUIs in MGED ("x -1") - Sean Morrison
* added (align, dir and print) subcommands to 'view' - Chris McGregor
* added (autoview, lookat, saveview) to 'view' - Chris McGregor
* fixed mged 'process' command on read-only databases - Sean Morrison
* fixed -exec behavior with 'flat' search in mged - Chris McGregor


----------------------------------------------------------------------
--- 2024-09-24 Release 7.40.2                                      ---
----------------------------------------------------------------------

* various manpage and help text updates - Josh Baker
* improved gist -F default behavior - Chris McGregor
* fixed gist crashing with halfspaces in component - Chris McGregor