@@ -17,7 +17,7 @@
       <command>nirt</command>
       <arg choice="opt" rep="norepeat"><replaceable>options</replaceable></arg>
       <arg choice="plain" rep="norepeat"><replaceable>model.g</replaceable></arg>
-      <arg choice="plain" rep="repeat"><replaceable>objects</replaceable></arg>
+      <arg choice="opt" rep="repeat"><replaceable>objects</replaceable></arg>
     </cmdsynopsis>
   </refsynopsisdiv>
 
